MIMIR-412: Fixes weird space that occurs during line break in authors.

--- a/src/main/resources/assets/styles/_article.scss
+++ b/src/main/resources/assets/styles/_article.scss
@@ -29,17 +29,20 @@
 
   .author-wrapper {
     @include make-row;
+    margin-bottom: $spacer * 2;
 
     & > * {
       @include make-col-ready();
       @include make-col(12);
 
-      margin-bottom: $spacer * 1;
-
       @include media-breakpoint-up(lg) {
         @include make-col(6);
         @include make-col-offset(1);
       }
+    }
+
+    p {
+      margin-bottom: 0;
     }
   }
 
